# CSVEditor

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CSVEditor.sln  CSVEditor.vcxproj  CSVEditor.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
installer/: CSVEditor_Installer.iss
src/: CSVEditor.rc  ConfigManager.cpp  ConfigManager.h  CsvDocument.cpp  CsvDocument.h  CsvDocument_Helper.cpp  DirectXResources.cpp  DirectXResources.h  EditorState.cpp  EditorState.h  Localization.cpp  Localization.h  MainWindow.cpp  MainWindow.h  MainWindow_Helpers_Temp.cpp  MemoryMappedFile.cpp  MemoryMappedFile.h  PieceTable.cpp  PieceTable.h  Resource.h  main.cpp  test_main.cpp
testcsv/: test_complex.csv  test_csv.txt  test_export.html  test_save_out.txt  test_utf16.csv
